--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div><span data-color="#920000" class="choice limit"></span> <span class="legend-text">Limit</span></div>
             </div>
             <div id="ExportWrapper">
-                <button id="Export">Download Image</button>
+                <button id="Export">Download</button>
                 <div id="ExportMessage"></div>
             </div>
             <button id="StartBtn"></button>
